; ModuleID = '/home/carl/AnghaBench/linux/net/bridge/netfilter/extr_ebtables.c_ebt_unregister_table.c'
source_filename = "/home/carl/AnghaBench/linux/net/bridge/netfilter/extr_ebtables.c_ebt_unregister_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net = type { i32 }
%struct.ebt_table = type { i32 }
%struct.nf_hook_ops = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ebt_unregister_table(%struct.net* %0, %struct.ebt_table* %1, %struct.nf_hook_ops* %2) #0 {
  %4 = alloca %struct.net*, align 8
  %5 = alloca %struct.ebt_table*, align 8
  %6 = alloca %struct.nf_hook_ops*, align 8
  store %struct.net* %0, %struct.net** %4, align 8
  store %struct.ebt_table* %1, %struct.ebt_table** %5, align 8
  store %struct.nf_hook_ops* %2, %struct.nf_hook_ops** %6, align 8
  %7 = load %struct.net*, %struct.net** %4, align 8
  %8 = load %struct.nf_hook_ops*, %struct.nf_hook_ops** %6, align 8
  %9 = load %struct.ebt_table*, %struct.ebt_table** %5, align 8
  %10 = getelementptr inbounds %struct.ebt_table, %struct.ebt_table* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @hweight32(i32 %11)
  %13 = call i32 @nf_unregister_net_hooks(%struct.net* %7, %struct.nf_hook_ops* %8, i32 %12)
  %14 = load %struct.net*, %struct.net** %4, align 8
  %15 = load %struct.ebt_table*, %struct.ebt_table** %5, align 8
  %16 = call i32 @__ebt_unregister_table(%struct.net* %14, %struct.ebt_table* %15)
  ret void
}

declare dso_local i32 @nf_unregister_net_hooks(%struct.net*, %struct.nf_hook_ops*, i32) #1

declare dso_local i32 @hweight32(i32) #1

declare dso_local i32 @__ebt_unregister_table(%struct.net*, %struct.ebt_table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
